--- a/230310/page.html
+++ b/230310/page.html
@@ -4,35 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="login.css">
     <title>Document</title>
 </head>
 <body class="flex-center">
     <div class="container">
-        <div class="main_logo"><img src="./img/insta_main2.png" alt=""></div>
-        <div class="login-container">
-            <div class="flex-center logo-wrapper">
-              <span class="logo-text">instagram</span>
-            </div>
-            <div class="input-wrapper">
-              <div class="login-wrapper flex-center">
-                <input
-                  class="login-input"
-                  type="text"
-                  placeholder="전화번호, 사용자 이름 또는 이메일"/>
+        <div class="main_logo">
+          <img src="./img/insta_main2.png" alt="">
+        </div>
+          <div class="container2">
+              <header>
+                  <img class = "brand_logo" src="./img/insta_logo.png" alt="logo">
+              </header>
+              <form>
+                  <input class = "id" type="text" placeholder="전화번호,사용자 이름 또는 이메일"> <!--placeholder : 입력창 안에 text를 넣을 수 있다-->
+                  <input class = "pwd" type="password" placeholder="비밀번호">
+                  <button class = "loginBtn">로그인</button>
+              </form>
+              <div class="or_line">
+                  <div class="line"></div>
+                  <div class="text">또는</div>
+                  <div class="line"></div>
               </div>
-              <div class="login-wrapper flex-center">
-                <input class="login-input" type="password" placeholder="비밀번호" />
-              </div>
-              <div class="flex-center button-wrapper">
-                <button class="login-button" disabled>로그인</button>
-              </div>
-            </div>
-            <div class="flex-center findpass">
-              <a>비밀번호를 잊으셨나요?</a>
-            </div>
+              <ul class="findpw">
+                  <li><p>비밀번호를 잊으셨나요?</p></li>
+              </ul>
           </div>
-
+          <div class = "account">
+              <ul>
+                  <li>계정이 없으신가요?</li>
+                  <li><p>가입하기</p></li>
+              </ul>
+          </div>
     </div>
     
   </body>
